# Lancelot

./: .gitignore  DEVELOPER_GUIDE.md  README.md  run.sh
HomoMulAcc-main/: .gitlab-ci.yml  .gitmodules  README.md
HomoMulAcc-main/examples/: 1_bfv_basics.cu  2_encoder.cu  CMakeLists.txt  example.cu
HomoMulAcc-main/include/: batchencoder.h  ciphertext.h  common.h  context.h  croots.h  evaluate.h  fft.h  gpucontext.h  gputype.h  plaintext.h  rns_bconv.cuh  secretkey.h  uintmath.cuh  uintmodmath.cuh  util.cuh
HomoMulAcc-main/include/util/: defines.h  encryptionparams.h  galois.h  globals.h  hash.h  polycore.h  rns.h
HomoMulAcc-main/python/: README.md
HomoMulAcc-main/src/: CMakeLists.txt  batchencoder.cu  ckks.cu  context.cu  croots.cu  eval_key_switch.cu  fft.cu  galois.cu  modulus.cu  rns_base.cu  rns_bconv.cu  secretkey.cu
HomoMulAcc-main/src/ntt/: intt_2d.cu  ntt_1d.cu
HomoMulAcc-main/src/util/: uintarith.cu  uintarithmod.cu
HomoMulAcc-main/unittest/: CMakeLists.txt  ciphertext.cu  ckks_encoder.cu  mempool.cu  unit_test_runner.cu
HomoMulAcc-main/unittest/util/: hash.cu  rns.cu  stringtouint64.cu  uintarithmod.cu  uintcore.cu
cahel-main/: .gitignore  CMakeLists.txt
cahel-main/examples/: 3_bgv_basics.cu  4_ckks_basics.cu  5_bfv_opt.cu  7_performance.cu  example.h
cahel-main/include/: cahel.h  ckks.h  galois.cuh  lock.cuh  mempool.cuh  ntt.cuh  polymath.cuh  prng.cuh  rns.cuh  rns_base.cuh  rns_bconv.cuh  scalingvariant.cuh  uintmath.cuh  uintmodmath.cuh
cahel-main/include/util/: blake2-impl.h  blake2.h  common.h  hestdparms.h  modulus.h  ntt.h  numth.h  uintarith.h  uintarithmod.h  uintarithsmallmod.h  uintcore.h
cahel-main/python/: CMakeLists.txt  setup.cfg
cahel-main/python/examples/: ckks.py
cahel-main/python/src/: binding.cu
cahel-main/src/: CMakeLists.txt  eval_key_switch.cu  evaluate.cu  mempool.cu  polymath.cu  prng.cu  rns.cu  rns_base.cu  rns_bconv.cu  scalingvariant.cu  secretkey.cu
cahel-main/src/ntt/: butterfly.cuh  fntt_2d.cu  ntt_keyswitch_old.cu  ntt_moddown.cu  ntt_modup.cu
cahel-main/src/util/: blake2b.cu  blake2xb.cu  galois.cu  globals.cu  hash.cu  ntt.cu  numth.cu  rns.cu  uintarithsmallmod.cu  uintcore.cu
cahel-main/unittest/: batchencoder.cu  encryptionparams.cu  evaluator.cu  math.cu  plaintext.cu  secretkey.cu
cahel-main/unittest/util/: common.cu  numth.cu  uint64tostring.cu  uintarith.cu  uintarithsmallmod.cu
lancelot-main-GPU/: README.md  ckks.py  example_usage.py  improvements_demo.py  log_2023.txt  log_CIFAR10_2023.txt  log_ciper_2023.txt  main.py  run.sh  run0.sh  run_lancelot.sh  run_openfhe.sh
lancelot-main-GPU/execute/: run0.sh
lancelot-main-GPU/src/: aggregation.py  update.py
lancelot-main-GPU/utils/: byzantine_fl.py  dataset.py  openfhe.py  options.py  sampling.py  test.py
